alignment fixes
slight fixes

--- a/client-sq/src/styles/App.css
+++ b/client-sq/src/styles/App.css
@@ -59,18 +59,16 @@ main{
 }
 .logo{
   font-weight: bold;
-  font-size: 35px;
+  font-size: 180%;
   color: #3d435a;
 }
  
 .link{
- 
-
   border-radius: 10px;
   
   display: flex;
   color: #3d435a;
-  padding: 10px 15px;
+  padding:  4% 6.7%;
   gap: 15px;
   transition: all 0.5s;
   text-decoration: none;
@@ -88,11 +86,11 @@ main{
 
 }
 .icon{
-  font-size: 16px;
+  font-size: 82%;
   
 }
  .link_text{
   margin-top: 2px;
-  font-size: 20px;
+  font-size: 100%;
   
 }
